// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IconButton should be rendered with only required props 1`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      account_circle
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 1`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      motif_ui
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 2`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      accessibility
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 3`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      accessible
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 4`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      accessible_forward
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 5`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      account_balance
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 6`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      account_balance_wallet
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 7`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      account_balance_wallet_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 8`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      account_circle
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 9`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      add
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 10`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      add_box
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 11`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      add_box_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 12`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      add_circle
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 13`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      add_circle_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 14`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      alarm
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 15`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      alarm_add
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 16`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      alternate_email
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 17`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      apartment
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 18`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      arrow_back
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 19`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      arrow_back_ios_new
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 20`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      arrow_downward
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 21`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      arrow_drop_down
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 22`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      arrow_drop_up
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 23`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      arrow_forward
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 24`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      arrow_forward_ios
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 25`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      arrow_insert
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 26`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      arrow_left_alt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 27`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      arrow_right_alt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 28`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      arrow_upward
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 29`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      article
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 30`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      assignment
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 31`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      assignment_ind
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 32`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      assist_walker
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 33`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      attach_file
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 34`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      autorenew
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 35`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      backspace
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 36`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      backup
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 37`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      balance
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 38`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      bar_chart
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 39`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      blind
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 40`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      block
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 41`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      bookmark
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 42`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      bookmark_manager
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 43`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      bookmark_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 44`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      border_all
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 45`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      cached
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 46`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      calendar_month
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 47`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      calendar_today
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 48`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      call
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 49`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      call_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 50`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      cancel
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 51`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      cancel_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 52`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      cardiology
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 53`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      cases
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 54`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      chat
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 55`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      chat_bubble
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 56`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      check
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 57`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      check_circle
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 58`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      check_circle_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 59`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      checklist
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 60`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      chevron_left
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 61`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      chevron_right
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 62`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      chips
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 63`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      close
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 64`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      cloud_done
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 65`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      cloud_download
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 66`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      collapse_content
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 67`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      collections_bookmark
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 68`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      compare_arrows
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 69`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      contact_page
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 70`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      contact_support
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 71`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      content_copy
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 72`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      content_cut
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 73`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      content_paste
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 74`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      contract
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 75`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      contract_edit
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 76`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      copy_all
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 77`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      create_new_folder
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 78`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      credit_card
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 79`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      crop_free
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 80`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      dashboard
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 81`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      delete
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 82`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      delete_forever
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 83`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      delete_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 84`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      density_medium
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 85`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      description
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 86`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      device_hub
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 87`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      device_reset
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 88`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      devices
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 89`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      dictionary
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 90`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      directions_car
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 91`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      diversity_3
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 92`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      do_not_disturb_on
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 93`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      domain
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 94`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      done_all
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 95`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      download
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 96`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      download_2
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 97`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      downloading
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 98`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      draft
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 99`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      drive_folder_upload
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 100`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      edit_document
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 101`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      emoji_flags
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 102`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      emoji_flags_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 103`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      encrypted
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 104`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      error
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 105`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      error_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 106`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      event
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 107`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      event_available
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 108`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      event_busy
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 109`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      expand_all
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 110`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      expand_content
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 111`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      extension
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 112`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      external
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 113`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      fact_check
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 114`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      factory
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 115`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      favorite
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 116`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      feature_search
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 117`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      feed
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 118`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      feedback
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 119`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      file_copy
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 120`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      file_present
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 121`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      filter
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 122`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      filter_alt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 123`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      filter_alt_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 124`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      filter_list
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 125`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      filter_list_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 126`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      filter_none
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 127`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      finance
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 128`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      fingerprint
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 129`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      flash_on
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 130`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      folder
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 131`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      folder_copy
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 132`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      folder_managed
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 133`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      folder_open
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 134`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      folder_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 135`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      folder_shared
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 136`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      format_quote
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 137`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      forum
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 138`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      grade
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 139`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      group
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 140`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      group_add
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 141`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      groups
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 142`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      handshake
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 143`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      handyman
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 144`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      heap_snapshot_large
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 145`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      hearing
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 146`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      hearing_disabled
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 147`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      help
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 148`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      help_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 149`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      home
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 150`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      home_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 151`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      how_to_reg
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 152`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      imagesmode
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 153`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      indeterminate_check_box
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 154`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      info
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 155`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      info_i
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 156`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      info_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 157`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      insert_chart
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 158`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      inventory
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 159`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      ios_share
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 160`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      keyboard
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 161`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      keyboard_alt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 162`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      keyboard_arrow_down
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 163`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      keyboard_arrow_up
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 164`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      keyboard_voice
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 165`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      label
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 166`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      label_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 167`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      language
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 168`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      library_books
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 169`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      link
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 170`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      link_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 171`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      list_alt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 172`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      lists
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 173`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      local_library
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 174`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      local_mall
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 175`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      location_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 176`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      location_on
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 177`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      location_on_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 178`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      lock
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 179`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      lock_open
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 180`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      logout
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 181`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      mail
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 182`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      mail_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 183`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      map
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 184`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      mode_cool
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 185`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      mode_heat
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 186`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      more_horiz
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 187`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      more_time
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 188`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      more_vert
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 189`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      moving
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 190`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      nature
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 191`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      near_me
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 192`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      nest_eco_leaf
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 193`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      note
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 194`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      note_add
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 195`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      notifications
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 196`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      notifications_active
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 197`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      notifications_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 198`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      palette
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 199`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      passkey
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 200`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      payments
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 201`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      person
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 202`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      person_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 203`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      phone_iphone
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 204`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      photo
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 205`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      photo_camera
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 206`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      photo_camera_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 207`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      picture_as_pdf
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 208`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      pie_chart
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 209`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      plagiarism
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 210`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      podcasts
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 211`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      priority_high
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 212`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      privacy_tip
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 213`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      prompt_suggestion
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 214`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      psychiatry
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 215`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      push_pin
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 216`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      push_pin_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 217`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      question_mark
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 218`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      receipt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 219`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      receipt_long
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 220`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      remove
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 221`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      reply
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 222`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      schedule
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 223`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      schedule_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 224`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      school
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 225`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      search
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 226`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      send
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 227`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      send_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 228`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      sentiment_dissatisfied
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 229`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      sentiment_satisfied
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 230`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      settings
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 231`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      settings_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 232`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      share
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 233`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      shield
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 234`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      shield_lock
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 235`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      signpost
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 236`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      sim_card
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 237`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      sim_card_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 238`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      speed
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 239`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      stethoscope
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 240`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      store
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 241`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      supervisor_account
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 242`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      table_rows
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 243`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      task
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 244`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      task_alt
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 245`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      thumb_down
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 246`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      thumb_up
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 247`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      topic
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 248`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      touch_app
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 249`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      trophy
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 250`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      undo
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 251`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      upload
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 252`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      upload_2
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 253`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      upload_file
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 254`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      verified_user
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 255`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      videocam
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 256`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      videocam_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 257`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      visibility
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 258`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      visibility_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 259`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      volume_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 260`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      volume_up
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 261`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      volunteer_activism
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 262`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      vpn_key
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 263`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      vpn_key_off
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 264`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      warning
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 265`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      warning_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 266`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      water_drop
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 267`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      waves
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 268`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      wb_sunny
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 269`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      work
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 270`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      work_outline
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 271`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      zoom_in
    </span>
  </button>
</div>
`;

exports[`IconButton should render all icons in motifIcons set 272`] = `
<div>
  <button
    class="Root md secondary mtf-ui-icons"
    data-testid="iconButtonTestId"
    type="button"
  >
    <span
      class="Root md mtf-ui-icons"
    >
      zoom_out
    </span>
  </button>
</div>
`;
